# tools

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: pypi.yml  pytest.yaml
data2yaml/: config.py
excel2yaml/: README.md  dataset.yaml  excel to yaml template.xlsx  excel2yaml.ipynb  excel2yaml.py  retriever.yaml
excel2yaml/.ipynb_checkpoints/: excel2yaml-checkpoint.ipynb
netcdf2csv/: README.md  netcdf2csv.ipynb  netcdf2csv.py
netcdf2csv/data/: morro.buoy_z06-waves.a1.20201201.attrs.csv  morro.buoy_z06-waves.a1.20201201.hdr.csv  morro.buoy_z06-waves.a1.20201201.time.1d.csv
src/tools/: data2yaml.py  excel2yaml.py  main.py
src/tools/excel2yaml/: cli.py  dataset_metadata.py  dependent_variable.py  get_dataset_config.py  get_retriever_config.py  independent_variable.py  ruamel_styles.py  template.xlsx  time_variable.py  write_yaml.py
test/data2yaml/: test_data2yaml.py
test/excel2yaml/: test_excel2yaml.py
test/excel2yaml/data/: dataset.yaml  retriever.yaml
tsdat_tools/: main.py  utils.py
tsdat_tools/excel2yaml/: cli.py  dependent_variable.py  get_dataset_config.py  template.xlsx
